tests/ui/mut/mut-pattern-mismatched.stderr
error[E0308]: mismatched types
  --> $DIR/mut-pattern-mismatched.rs:8:10
   |
LL |      let &_
   |          ^^ types differ in mutability
...
LL |         = foo;
   |           --- this expression has type `&mut {integer}`
   |
   = note: expected mutable reference `&mut {integer}`
                      found reference `&_`

error[E0308]: mismatched types
  --> $DIR/mut-pattern-mismatched.rs:17:9
   |
LL |     let &mut _
   |         ^^^^^^ types differ in mutability
...
LL |          = bar;
   |            --- this expression has type `&{integer}`
   |
   = note:      expected reference `&{integer}`
           found mutable reference `&mut _`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
